# kem-dem-wasm

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  foundry.toml  rust-toolchain.toml
.github/workflows/: ci.yml
contracts/: X25519KeyRegistry.sol
contracts/test/: X25519KeyRegistry.t.sol
docs/: test-vectors.md
examples/react-demo/: README.md  index.html  package.json  test-ethers.js  test-ui-zk.js  test-zk.js  vite.config.js
examples/react-demo/src/: App.css  App.jsx  App.test.jsx  index.css
examples/react-demo/src/components/: SecureForm.jsx
examples/zk-circom-demo/: README.md  package.json
examples/zk-circom-demo/circuits/: ZkDecryptVerifier.circom
examples/zk-circom-demo/scripts/: generate-input.js
src/: curve.rs  dem.rs  derive.rs  error.rs  hex_util.rs  hpke_api.rs  kem.rs  kemdem_functions.rs  lib.rs  runtime_kemdem.rs  te_arith.rs  utils.rs  zk_api.rs
