[package]
name = "kem-dem-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "WASM KEM-DEM hybrid encryption with flexible field support"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
hpke = { version = "0.13.0", default-features = false, features = ["alloc", "x25519"] }
rand = { version = "0.9.2", default-features = false, features = ["os_rng", "std_rng"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
