[package]
name = "kem-dem-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Ron Nakamoto <adarshron@gmail.com>"]
description = "WASM KEM-DEM hybrid encryption with flexible field support and a ZK-friendly authenticated DEM"
repository = "https://github.com/ronnakamoto/kem-dem-wasm"
license = "MIT OR Apache-2.0"

# Enable wasm-opt with size-oriented passes. `-Os` is the standard
# size-vs-speed trade-off. The `--enable-*` flags allow the WASM
# features that rustc 1.82+ emits by default for wasm32-unknown-unknown
# (without these, wasm-opt's validator refuses to load the input).
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Os",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-reference-types",
    "--enable-multivalue",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.121"
js-sys = "0.3.98"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
hpke = { version = "0.13.0", default-features = false, features = ["alloc", "x25519"] }
rand = { version = "0.9.4", default-features = false, features = ["os_rng", "std_rng"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
# getrandom 0.2 is pulled in transitively by rand 0.8 → rand_core 0.6.
# We must list it as a direct dep here so Cargo enables the "js" feature.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }
subtle = { version = "2.6", default-features = false }
ark-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
light-poseidon = "0.4"
# iden3 / circomlib-compatible BabyJubJub (a = 168700, d = 168696,
# generator = circomlib BASE8). Required for byte-for-byte
# interoperability with Circom proofs.
taceo-ark-babyjubjub = { version = "0.5.3", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.71"

# Production-grade release profile: full LTO, single codegen unit, and
# `opt-level = "s"` to minimise WASM binary size without sacrificing
# correctness. Strip debug symbols and abort on panic to shave a
# few more KB off the shipped artefact.
[profile.release]
opt-level    = "s"
lto          = "fat"
codegen-units = 1
panic        = "abort"
strip        = "symbols"
debug        = false
overflow-checks = false
